--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
 
+<html>
+    <head>
+<title>Katelyn</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="sidebar"></div>
+            <div class="content">
+                <h1>Katelyn Howard</h1>
+                <p>
+                    beautiful
+                </p>
+            </div>
+        </div>
+    </body>
+</html>
