--- a/index.html
+++ b/index.html
@@ -2,16 +2,117 @@
 
 <html>
     <head>
-<title>Katelyn</title>
-    </head>
+<title>7VOUGE</title>
+<style type="text/css">
+    body {
+background:  hotpink;
+color: white;
+padding: 10px;
+font-family: arial;
+}
+
+.container {
+max-width: 800px;
+margin: 0 auto;
+background: black;
+border:36px dashed purple;
+}
+
+.content {
+padding: 15px;
+margin-left: 225px;
+}
+
+.sidebar {
+width: 225px;
+float: left;
+padding: 10px;
+}
+
+.sidebar img {
+width: 200px;
+}
+
+p {
+width: 600px;
+}
+
+h1 {
+margin-top: 5px;
+margin-bottom: 5px;
+}
+
+nav {
+background: #EF5029;
+margin-bottom: 20px;
+height: 50px;
+padding: 0 10px;
+}
+
+nav ul {
+list-style-image: none;
+float: right;
+}
+
+nav ul li {
+display: inline;
+padding-right: 10px;
+}
+
+nav a {
+text-decoration: none;
+color: #fff;
+}
+
+nav h1 {
+float: left;
+margin-top: 13px;
+margin-left: 10px;
+font-size: 21px;
+}
+
+ul.portfolio {
+list-style-type: none;
+padding-left: 0;
+}
+
+ul.portfolio li {
+background: #fff;
+padding: 10px;
+border-radius: 10px;
+margin-bottom: 10px;
+}
+
+ul.portfolio li:hover {
+background: #eee;
+} 
+
+.portfolio a {
+text-decoration: none;
+color: #454545;
+}
+
+
+</style>
+</head>
     <body>
         <div class="container">
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <img src= "http://pastreunited.com/resources/coco_chanel_quote11.jpg">
+            </div>
+            
             <div class="content">
+                
                 <h1>Katelyn Howard</h1>
                 <p>
-                    beautiful
+                 7VOUGE
                 </p>
+                <h4>Interests</h4
+                <ul>
+                     <li>Fashion and design </li>
+                     <li> Cosmetology</li>
+                    <li>Art </li>
+                 </ul>
             </div>
         </div>
     </body>
